--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/yangin/cli#readme",
   "dependencies": {
     "@gitbeaker/node": "^35.6.0",
+    "@yangin/jenkins-api": "^1.0.0",
     "chalk": "^4.1.2",
     "commander": "^9.1.0",
     "dayjs": "^1.11.1",
