--- a/package.json
+++ b/package.json
@@ -6,10 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "devops": "./bin/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yangin/cli.git"
   },
+  "keywords": [
+    "cli",
+    "devops",
+    "gitlab",
+    "jenkins"
+  ],
   "author": "yangjin",
   "license": "ISC",
   "bugs": {
