--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dayjs": "^1.11.1",
     "figlet": "^1.5.2",
     "inquirer": "^8.2.2",
+    "nginx-conf": "^2.1.0",
     "ora": "5.4.1",
     "prettier": "^2.6.2",
     "xml-js": "^1.6.11"
